--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,18 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+saludo:
+    path: /hello/{name}
+    controller: App\Controller\ConferenceController::test
+
+
+index:
+    path: /Admin
+    controller: App\Controller\Admin\DashboardController::index
+
+
+mostrar:
+    path: /conference/{id}
+    controller: App\Controller\ConferenceController::show
+    methods: GET
